--- a/MyWorkSpace/Project1/Project1.project
+++ b/MyWorkSpace/Project1/Project1.project
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<CodeLite_Project Name="Project1" Version="11000" InternalType="Console">
+<CodeLite_Project Name="carpetcleaningestimate" Version="11000" InternalType="Console">
   <Plugins>
     <Plugin Name="qmake">
       <![CDATA[00010001N0005Debug000000000000]]>
