--- a/Section8/Makefile
+++ b/Section8/Makefile
@@ -1,8 +1,8 @@
 .PHONY: clean All
 
 All:
-	@echo "----------Building project:[ AssignmentOperator - Debug ]----------"
-	@cd "AssignmentOperator" && "$(MAKE)" -f  "AssignmentOperator.mk"
+	@echo "----------Building project:[ IncrementDecrementOperators - Debug ]----------"
+	@cd "IncrementDecrementOperators" && "$(MAKE)" -f  "IncrementDecrementOperators.mk"
 clean:
-	@echo "----------Cleaning project:[ AssignmentOperator - Debug ]----------"
-	@cd "AssignmentOperator" && "$(MAKE)" -f  "AssignmentOperator.mk" clean
+	@echo "----------Cleaning project:[ IncrementDecrementOperators - Debug ]----------"
+	@cd "IncrementDecrementOperators" && "$(MAKE)" -f  "IncrementDecrementOperators.mk" clean
